<resources>
    <string name="app_name">CoffeeApp</string>
    <string name="button_register_text">Регистрация</string>
    <string name="text_field_e_mail_title">e-mail</string>
    <string name="text_field_password_title">Пароль</string>
    <string name="text_field_repeat_password_title">Повторите пароль</string>
    <string name="button_enter_text">Войти</string>
    <string name="cafes_screen_title">Ближайшие кофейни</string>
    <string name="login_screen_title">Вход</string>
    <string name="registration_screen_title">Регистрация</string>
    <string name="button_show_map_text">На карте</string>
    <string name="password_field_hint">******</string>
    <string name="login_field_hint">example@example.ru</string>
    <string name="button_go_to_pay">Перейти к оплате</string>
    <string name="menu_screen_title">Меню</string>
    <string name="button_text_pay">Оплатить</string>
    <string name="cart_screen_title">Ваш заказ</string>
    <string name="cart_screen_waiting_time">Время ожидания заказа\n%1$s минут!\nСпасибо, что выбрали нас!</string>
    <string name="cart_screen_waiting_hint">Пожалуйста, добавьте товары в корзину.</string>
    <string name="item_price_wrapper">%1$s руб</string>
    <string name="distance_kilometers_format">%1$s км от вас</string>
    <string name="distance_meters_format">%1$s м от вас</string>
    <string name="toast_empty_login">Поле логина пусто</string>
    <string name="toast_password_blank">Поле пароля пусто</string>
    <string name="toast_repeat_password_blank">Поле подтверждения пароля пусто</string>
    <string name="toast_entry_data_mismatch">Неправильный e-mail или пароль</string>
    <string name="toast_e_mail_occupied">Этот e-mail занят</string>
    <string name="toast_wrong_confirmation_password">Повторный ввод пароля не совпал</string>
    <string name="toast_no_internet">Нет интернет соединения</string>
    <string name="toast_required_authorisation">Необходима повторная авторизация</string>
    <string name="toast_network_error">Ошибка сети</string>
    <string name="toast_location_offline">Навигация отключена в настройках телефона.</string>
    <string name="map_screen_title">Карта</string>
</resources>